--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
 }
 
 .app__input {
-  max-width: 24rem;
+  max-width: 24vw;
   background-color: lightpink;
   border: purple solid 2px;
   transition: all 500ms;
@@ -35,10 +35,11 @@
   display: flex;
   flex-direction: row;
   gap: 3rem;
+  flex-wrap: wrap;
 }
 
 .app__form input {
-  max-width: 30rem;
+  max-width: 30vw;
   font-size: 1.5rem;
   border-color: purple;
   border-width: 2px;
@@ -81,7 +82,7 @@
   gap: 1rem;
   margin-top: 2rem;
   flex-wrap: wrap;
-  max-width: 64rem;
+  max-width: 64vw;
 }
 
 .app__item {
@@ -93,7 +94,9 @@
   padding: .5rem 1rem;
   border-radius: 1rem;
   text-align: center;
-  width: 20rem;
+  width: 32%;
+  min-width: 160px;
+  max-width: 500px;
   transition: all 500ms;
 }
 
